
Added Sega Master System emulation
Added .sms file viewer
Added midi output and .mid support for QL and SN audio chips (Master System, SG1000, etc)
Added Automatic Snapshots to RAM + Rewind feature
Added new improved real tape loading algorithm
Added setting to disable TZX pauses
Added zsf to scr support for Next, ZX-Uno and TSConf snapshots
Added Jupiter Ace 51 KB RAM emulation

Improved ZX Vision menu interface:
-Added setting to pause cpu emulation on menu when multitask active
-Show in file selector when a file can be expanded
-Improved screen file previews: any file size of 6912 bytes is guessed as Spectrum screen
-Maximizing windows now take care of size of zx desktop
-Added item to reduce+rearrange windows
-Added BeOS GUI Style
-Colour palette window now shows all colours that fit in the window
-View sprite legend now adapts to size

Improved Audio to .mid exporter: allow changing instrument
Improved DAAD/PAWS/Quill Debugger: Now can render any localization graph in a Text Adventure

Fixed file previews on corrupted files: pzx, tap
Fixed rearranging windows and using total window height


Version 9.2 - Cliff Hanger edition. 05 April 2021

Added SamRam Gerton Lunter interface emulation
Added new ZX-Uno Prism video mode
Added Dandanator storage button icon
Added alternate Jupiter ACE rom
Added another fourth easter egg ;)
Added read only setting for esxdos handler
Added setting to redefine joystick fire key
Added midi output instrument selector
Added Debug action to set PC register to zero
Added command line setting --copy-file-to-mmc to be able to copy files to a mmc image before starting ZEsarUX
Added ZRCP command realtape-open


Improved ZX-Uno emulation:
-Updated BIOS, Flash and ESXDOS (ESXDOS now runs 0.8.6 final version)
-Added command line setting --zxuno-initial-64k to allow loading a initial 64kb block in bootm mode, bypassing the normal boot rom

Improved TBBlue emulation:
-Added .snx snapshot support