@@ -43,9 +43,13 @@ https://github.com/tslabs/zx-evo/tree/master/pentevo/unreal
 Copyright Morgul and Uto. Distributed under GNU GENERAL PUBLIC LICENSE v3, you may read it on the LICENSE_undaad file
 https://github.com/Utodev/undaad
 
--ungac
+-grackle - Dumper and reader for Graphic Adventure Creator games
 Copyright 2014 David Lodge. Distributed under BSD 3-Clause "New" or "Revised" License, you may read it on the LICENSE_grackle file
 https://github.com/tautology0/grackle
+
+-ungac
+Copyright 2006, 2020 by John Elliott. Distributed under the GNU General Public License version 2, you may read it on the LICENSE_ungac file
+https://www.seasip.info/Unix/UnQuill/
 
 -unpaws/unquill
 Copyright various authors. Distributed under MIT License, you may read it on the LICENSE_unpaws file
